--- a/EmployeePortal/appsettings.json
+++ b/EmployeePortal/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EmployeeContext": "Data Source=(localdb)\\Denisedb; Initial Catalog=employeePortal; TrustServerCertificate=True"
+    "EmployeeContext": "Data Source=(localdb)\\DenisePersonalDB; Initial Catalog=employeePortal; TrustServerCertificate=True"
   }
 }
